# pdf-destinator

./: .gitignore  LICENSE  PYPI_NOTES.md  README.md  pyproject.toml  requirements.txt
pdf_destinator/: __init__.py  picker.py
