[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-destinator"
version = "0.1.1"
description = "Interactive GUI tool to add named destinations and clickable links to PDF files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claude & friends"}
]
keywords = ["pdf", "destinations", "links", "annotations", "navigation", "bookmarks"]
# keywords = ["pdf", "destinations", "links", "annotations", "navigation", "bookmarks", "acrobat-alternative", "pdf-editor", "table-of-contents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Office/Business",
]
requires-python = ">=3.8"
dependencies = [
    "pymupdf>=1.23.0",
    "pypdf>=3.0.0",
    "pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/SnowlionAI/pdf-destinator"
Repository = "https://github.com/SnowlionAI/pdf-destinator"
Issues = "https://github.com/SnowlionAI/pdf-destinator/issues"

[project.scripts]
pdf-destinator = "pdf_destinator.picker:main"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_destinator*"]
